@@ -16,7 +16,8 @@
 - improved built-in sessions by added `return {Number}` to `.update()` and `.refresh()` method
 - updated Tangular template engine to `v5`
 - extended `$` by adding `uri` property linked with the `controller.req.uri`
-- added `NEWWORKER()` method
+- added `NEWTHREAD(name, [data])` method, runs the `/workers/{name}.js` as `worker_threads`
+- added `NEWFORK(name)` method (a better alternative to the `WORKER()` method), runs the `/workers/{name}.js` as `fork`
 - added `NEWMACRO(script)` method for compiling custom Total.js macros
 - extended built-in Authorization by adding `opt.auth($)` method for additional authorization
 - added `COPY()` alias to `U.copy()`
